# codestract-context-tool

./: .gitignore  LICENSE  README.md  app.py  csgui.py  main.py  pyproject.toml  requirements.txt  techstack.md  techstack.yml
.codestract/: project_export_20240518_154420.txt  project_export_20240518_154722.txt  project_export_20240518_155055.txt  project_export_20240518_155759.txt  project_export_20240518_155928.txt
src/codestract/: __init__.py  app.py  exporter.py
src/codestract/styles/: app.css
src/codestract/ui/widgets/: file_preview.py  file_tree_panel.py  summary_panel.py
src/codestract/utils/: constants.py  file_utils.py  logging.py
